<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="main_news">消息</string>
    <string name="main_home">首页</string>
    <string name="more">更多</string>
    <string name="main_manage_date">时间</string>
    <string name="main_friends">好友</string>
    <string name="text_login">登录</string>
    <string name="text_register">注册</string>
    <string name="text_back">返回</string>
    <string name="text_launch_clause">使用Whocare，就表示您同意Whocare的\n<a href="clause_use">使用条款</a>和<a href="privacy">隐私策略</a></string>
    <string name="launch_account_tip">已有Whocare账号了？</string>
    <string name="text_forgot_pasword">找回密码</string>
    <string name="login_mobilephone_hint">请输入手机号码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="text_to_register">我要注册</string>
    <string name="title_forget_password">找回密码</string>
    <string name="register_mobilephone_hint">请填写您的手机号码</string>
    <string name="verifycode_edit_hint">请输入验证码</string>
    <string name="verifycode_submit">提交</string>
    <string name="verifycode_tip">我们已发送<![CDATA[<font color="#694dd0">验证码</font>]]>短信到这个手机号码</string>
    <string name="title_verifycode">请输入验证码</string>
    <string name="title_fill_password">设置密码</string>
    <string name="fill_password_tip">密码为6-20位数字或英文字母</string>
    <string name="fill_password_submit">提交</string>
    <string name="fill_password_hint">请设置密码</string>
    <string name="title_fill_nickname">请输入昵称</string>
    <string name="fill_nickname_tip">请设定头像、昵称、方便朋友认出你</string>
    <string name="fill_nickname_edit_hint">请输入昵称</string>
    <string name="fill_nickname_edit_title">昵称</string>
    <string name="fill_nickname_submit">下一步</string>
    <string name="verifycode_countdown"><![CDATA[<font color="#694dd0">%d</font>]]> 秒后，重新获取验证码</string>
    <string name="verifycode_resend">获取验证码</string>
    <string name="toast_login_empty_phone_and_password">请输入账号和密码</string>
    <string name="toast_empty_phone">请输入账号</string>
    <string name="toast_login_error_format_phone">手机号码格式错误</string>
    <string name="toast_error_format_password">密码为6—20位数字或英文字母</string>
    <string name="toast_register_empty_phone">请输入手机号码</string>
    <string name="toast_register_error_format_phone">手机号码格式错误</string>
    <string name="toast_registered">您的手机号码%s已注册，请直接登录</string>
    <string name="toast_verify_empty">请输入验证码</string>
    <string name="toast_verify_error">验证码错误</string>
    <string name="toast_empty_password">请输入密码</string>
    <string name="toast_empty_nickname">请填写昵称</string>
    <string name="select_pic_take_photo">拍照</string>
    <string name="select_pic_local">从手机相册选择</string>
    <string name="select_pic_cancel">取消</string>
    <string name="forget_password_submit">下一步</string>
    <string name="title_activity_clause">使用条款</string>
    <string name="title_activity_privacy">隐私策略</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_to_login">我要登录</string>
    <string name="action_submit">完成</string>
    <string name="toast_register_succeed">注册成功</string>
    <string name="dialog_login_alert_cancel">取消</string>
    <string name="dialog_login_alert_continue">马上注册</string>
    <string name="toast_error_network">网络异常</string>
    <string name="dialog_message_login">正在登录...</string>
    <string name="dialog_message_forgot_password">正在发送验证码</string>
    <string name="dialog_message_verifycode">正在校验验证码</string>
    <string name="dialog_message_reset_password">正在重设密码</string>
    <string name="dialog_message_fill_nickname">正在完善个人资料</string>
    <string name="dialog_message_register">正在注册</string>
    <string name="title_fragment_my">我的账号</string>
    <string name="my_title_setting">设置</string>
    <string name="my_title_add_friend">添加好友</string>
    <string name="my_title_friends">我的好友</string>
    <string name="my_title_friend_request">好友请求</string>
    <string name="friend_request_empty">暂无好友请求哦，\n要不主动点，去加几个好友？</string>
    <string name="action_add_friend">我要加好友</string>
    <string name="title_activity_friend_request">好友请求</string>
    <string name="title_activity_friends">我的好友</string>
    <string name="title_activity_new_friend">添加好友</string>
    <string name="friend_search_hint">请输入好友手机号码</string>
    <string name="title_new_friend_mail">通讯录朋友</string>
    <string name="menu_add_friend">加好友</string>
    <string name="request_accept">接受</string>
    <string name="friend_action_add_friend">添加好友</string>
    <string name="friends_empty">暂无好友哦，\n要不主动点，去加几个好友？</string>
    <string name="friend_search_cancel">取消</string>
    <string name="title_fragment_search_result">搜索结果</string>
    <string name="friend_request_unknown">不在手机通讯录内</string>
    <string name="friend_request_name">手机联系人：%s</string>
    <string name="request_send">加为好友</string>
    <string name="dialog_message_invite_friend">正在发送好友申请</string>
    <string name="dialog_message_agree_invite">正在添加好友</string>
    <string name="friends_photo_count">%s 张照片</string>
    <string name="friend_search_empty">没有符合的结果</string>
    <string name="contacts_friend">通讯录朋友</string>
    <string name="relation_wait_verify">待验证</string>
    <string name="relation_agree">已加为好友</string>
    <string name="dialog_message_fetch_contacts">正在获取朋友信息</string>
    <string name="friend_search_content">搜索：%s</string>
    <string name="title_activity_setting">设置</string>
    <string name="setting_title_avatar">头像</string>
    <string name="setting_title_nickname">昵称</string>
    <string name="setting_title_logout">退出账号</string>
    <string name="setting_title_password">修改密码</string>
    <string name="title_activity_update_nickname">昵称</string>
    <string name="update_nickname_hint">请输入昵称</string>
    <string name="action_cancel">取消</string>
    <string name="menu_submit">完成</string>
    <string name="dialog_logout_tip">退出后不会删除任何资料记录，下次登录依然可以使用本账号</string>
    <string name="dialog_logout">退出</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_message_update_avatar">正在上传头像</string>
    <string name="dialog_message_update_nickname">正在修改昵称</string>
    <string name="title_activity_fill_phone">请填写手机号</string>
    <string name="toast_reset_password_success">重置密码成功</string>
    <string name="tab_title_message">Whocare</string>
    <string name="tab_title_my">我</string>
    <string name="tab_title_empty" >" "</string>
    <string name="title_activity_upload_pic">上传图片</string>
    <string name="action_upload">开始上传照片</string>
    <string name="dialog_upload_title_reselect">可以重新挑选照片啦！哈哈哈哈哈哈</string>
    <string name="dialog_upload_reselect_positive">马上挑选</string>
    <string name="dialog_upload_button_negative">再看看这两张</string>
    <string name="dialog_upload_wait_positive">我知道了</string>
    <string name="dialog_upload_title_wait">再过 %1$s 小时 %2$s 分钟就可以重新挑选图片咯 ～ ～</string>
    <string name="title_activity_photos_flow">看见</string>
    <string name="photos_flow_empty">亲，你还没发过照片呢，\n开来一张吧</string>
    <string name="action_camera">马上来一张</string>
    <string name="dialog_message_upload_photo">正在发布图片</string>
    <string name="dialog_message_upload_update_photo">正在更新图片</string>
    <string name="toast_error_unselected_image">请选择一张要上传的图片</string>
    <string name="comment_send">发送</string>
    <string name="my_photo_count"><![CDATA[<font color="#694dd0">%s</font>]]>张照片</string>
    <string name="action_delete">删除</string>
    <string name="reply">回复</string>
    <string name="dialog_delete_not_allowed_title">亲，只能删除超过存在24小时的照片哦</string>
    <string name="dialog_delete_not_allowed_button_positive">我知道了</string>
    <string name="dialog_delete_confirm_title">确认删除？</string>
    <string name="action_negative">取消</string>
    <string name="action_positive">确认</string>
    <string name="tip_news">%s个新消息</string>
    <string name="tip_remind">传一张图片，即可查看好友新上传的图片哦～</string>
    <string name="loading_more">正在加载...</string>
    <string name="title_activity_message">新消息</string>
    <string name="message_empty">暂无新消息</string>
    <string name="message_intro_default">评论了你的照片</string>
    <string name="message_delete_success">已删除</string>
    <string name="message_delete_loading">正在删除...</string>
    <string name="personal_album_empty">暂无照片</string>
    <string name="forget_password_success">用户未登录</string>

    <string name="update_avatar">上传头像</string>
    <string name="text_forget_password">忘记密码</string>

</resources>
