<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_setting_margin_top"
    android:background="@color/activity_background">

    <name.walnut.kanjian.app.views.ClearEditText
        android:paddingLeft="@dimen/activity_setting_horizontal_margin"
        android:paddingRight="@dimen/activity_setting_horizontal_margin"
        android:id="@+id/login_mobilephone"
        app:hint="@string/login_mobilephone_hint"
        android:background="@color/background_edit"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height">
        <requestFocus />
        </name.walnut.kanjian.app.views.ClearEditText>

    <name.walnut.kanjian.app.views.ClearEditText
        android:id="@+id/login_password"
        app:hint="@string/login_password_hint"
        android:layout_marginTop="1dp"
        android:paddingLeft="@dimen/activity_setting_horizontal_margin"
        android:paddingRight="@dimen/activity_setting_horizontal_margin"
        android:inputType="textPassword"
        android:background="@color/background_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height">

        </name.walnut.kanjian.app.views.ClearEditText>

    <Button
        android:id="@+id/login"
        style="@style/IButton.purple"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="@dimen/activity_setting_horizontal_margin"
        android:layout_marginRight="@dimen/activity_setting_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_login" />

    <TextView
        android:id="@+id/login_forget_password"
        android:layout_gravity="right"
        android:layout_marginRight="14dp"
        android:text="@string/text_forgot_pasword"
        android:textColor="@color/text_purple"
        android:textSize="18sp"
        android:layout_marginTop="21dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:gravity="center_horizontal|bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/register_tv"
            android:textColor="@color/text_gray"
            android:text="@string/text_to_register"
            android:textSize="20sp"
            android:layout_marginBottom="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        </RelativeLayout>
</LinearLayout>
