<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_sel_portrait"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_blue"
            android:gravity="center"
            android:padding="20dip"
            android:text="@string/update_avatar"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <name.walnut.kanjian.app.views.RoundImageView
            android:layout_width="80dip"
            android:layout_height="80dip"
            android:visibility="invisible" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_red"
        android:gravity="center"
        android:hint="@string/title_fill_nickname"
        android:maxLength="11"
        android:padding="20dip"
        android:textColor="@color/white"
        android:textColorHint="@color/text_hint"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_blue"
        android:gravity="center"
        android:padding="20dip"
        android:text="@string/action_submit"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d3d2b6"
        android:gravity="center"
        android:padding="20dip"
        android:text="@string/text_back"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />
</LinearLayout>
