<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_yellow"
    android:id="@+id/register_container">
    <EditText
        android:id="@+id/edt_register_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_mobilephone_hint"
        android:padding="20dip"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:maxLength="11"
        android:phoneNumber="true"
        android:textStyle="bold"
        android:textColorHint="@color/text_hint"
        android:background="@color/main_red"/>
    <Button
        android:id="@+id/btn_next_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dip"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/fill_nickname_submit"
        android:background="@color/main_blue"
        android:onClick="onClickNext"/>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dip"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@color/dark_yellow"
        android:text="@string/text_back" />
</LinearLayout>

