<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/activity_background"
    android:paddingTop="@dimen/activity_setting_margin_top"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <name.walnut.kanjian.app.views.ClearEditText
        android:id="@+id/fill_password_edit"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="10dp"
        android:inputType="textPassword"
        app:hint="@string/fill_password_hint"
        android:background="@color/background_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height">
        <requestFocus />
        </name.walnut.kanjian.app.views.ClearEditText>

    <TextView
        android:textColor="@color/text_gray"
        android:layout_marginTop="20dp"
        android:text="@string/fill_password_tip"
        android:textSize="18sp"
        android:paddingLeft="@dimen/activity_setting_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="25dp"
        android:id="@+id/fill_password_submit"
        android:text="@string/fill_password_submit"
        android:layout_marginLeft="@dimen/activity_setting_horizontal_margin"
        android:layout_marginRight="@dimen/activity_setting_horizontal_margin"
        style="@style/IButton.purple"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height" />

</LinearLayout>