<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_layout"
    android:orientation="vertical"
    android:background="@color/gray"
    android:layout_gravity="bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:gravity="center"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:background="@drawable/bg_popup_button"
        android:text="@string/dialog_logout_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <Button
        android:id="@+id/dialog_logout"
        style="@style/IButton.popup"
        android:text="@string/dialog_logout"
        android:layout_width="match_parent"
        android:layout_height="56dp" />
    <View
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <View
        android:layout_marginTop="5dp"
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <Button
        style="@style/IButton.popup"
        android:id="@+id/dialog_cancel"
        android:text="@string/dialog_cancel"
        android:layout_width="match_parent"
        android:layout_height="56dp" />
    <View
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
</LinearLayout>